--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           </a>
           <a href="https://www.retrogames.cz/play_304-SNES.php?language=EN" target="_blank" class="desktop-icon-wrapper is-whitepaper-icon w-inline-block">
             <img src="./goat/pad.gif" loading="lazy" sizes="(max-width: 479px) 48px, (max-width: 767px) 10vw, 80px" srcset="./goat/pad.gif 500w, ./goat/pad.gif 800w, ./goat/pad.gif 961w" alt class="desktop-icons">
-            <h2 class="icons-heading">Tournaments</h2>
+            <h2 class="icons-heading">play</h2>
           </a>
           <a href="https://www.dextools.io/app/en/ether/pair-explorer/" target="_blank" class="desktop-icon-wrapper is-whitepaper-icon w-inline-block">
             <img src="./goat/sad.gif" loading="lazy" sizes="(max-width: 479px) 48px, (max-width: 767px) 10vw, 80px" srcset="./goat/sad.gif 500w, ./goat/sad.gif 800w, ./goat/sad.gif 1080w, ./goat/sad.gif 1600w, ./goat/sad.gif 2000w, ./goat/sad.gif 2174w" alt class="desktop-icons">
@@ -286,7 +286,7 @@
           <div class="popup-top-bar">
             <div class="popup-title-wrap">
               <img src="goat/pad.gif" loading="lazy" sizes="100vw" srcset="images/6444147b3896b548c0e430a9_whitepaper-p-500.png 500w, images/6444147b3896b548c0e430a9_whitepaper-p-800.png 800w, images/6444147b3896b548c0e430a9_whitepaper.png 961w" alt class="popup-icon">
-              <div class="popup-title">Tournaments</div>
+              <div class="popup-title">play</div>
             </div>
             <div class="popup-button-wrap">
               <a href="#" class="popup-button expand w-inline-block">
