--- a/index.html
+++ b/index.html
@@ -352,6 +352,9 @@
         <img src="fonts/6440775b98cac1c374cd2c25_Time_light.svg" loading="lazy" alt class="clock-icon">
         <div id="clock" class="clock"></div>
       </div>
+      <div id="foo" >
+        <img src="./hindi.gif" alt="">
+      </div>
     </div>
   </div>  
     <script src="js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
