--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
       animation-duration: 5s;
       animation-iteration-count: infinite;
       height: 100px;
+      padding-bottom: 3rem;
     }
 
     #tens-gif {
@@ -104,9 +105,9 @@
     }
 
     #ontu-gif {
-      bottom: 0;
+      bottom: 2;
       right: 0;
-      animation-name: slide-ontu;
+     
     }
     @media only screen and (max-width: 768px) {
       #tens-gif img {
@@ -336,9 +337,7 @@
           </a>
         </div>
         <div class="menu-side-wrapper">
-          <div class="gif-container" id="ontu-gif">
-            <img src="images/ontu.gif" alt="Ontu GIF">
-          </div>
+         
           <a data-w-id="a099d061-e64b-d3e1-7e7d-b09985ef420a" href="#" class="menu-button w-inline-block">
             <h3 class="menu-title">START</h3>
           </a>
@@ -353,7 +352,9 @@
         <div id="clock" class="clock"></div>
       </div>
       <div id="foo" >
-        <img src="./hindi.gif" alt="">
+        <img style="position: relative; margin-bottom: -4rem; margin-right: 3rem;" src="./images/ontu.gif" type alt="">
+        <img src="./hindi.gif" type alt="">
+
       </div>
     </div>
   </div>  
