--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <img src="images/64441b0b5570e31234050fd4_twitter.png" loading="lazy" alt class="link-icon">
                 <div class="text-block-3">TWITTER</div>
               </a>
-              <a href="https://t.me/" target="_blank" class="icon-text-wrapper w-inline-block">
+              <a href="https://t.me/BitConnectEntry" target="_blank" class="icon-text-wrapper w-inline-block">
                 <img src="images/64441a2b0d01ac05ee6cd518_telegram.png" loading="lazy" sizes="100vw" srcset="images/64441a2b0d01ac05ee6cd518_telegram-p-500.png 500w, images/64441a2b0d01ac05ee6cd518_telegram.png 608w" alt class="link-icon">
                 <div class="text-block-4">TELEGRAM</div>
               </a>
@@ -323,7 +323,7 @@
             <img src="images/64441c2d088b01678e5830f1_dextools.png" loading="lazy" sizes="100vw" srcset="images/64441c2d088b01678e5830f1_dextools-p-500.png 500w, images/64441c2d088b01678e5830f1_dextools-p-800.png 800w, images/64441c2d088b01678e5830f1_dextools-p-1080.png 1080w, images/64441c2d088b01678e5830f1_dextools-p-1600.png 1600w, images/64441c2d088b01678e5830f1_dextools-p-2000.png 2000w, images/64441c2d088b01678e5830f1_dextools.png 2174w" alt class="start-icon">
             <div class="menu-link-title">DEXTOOLS</div>
           </a>
-          <a href="https://t.me/" target="_blank" class="start-menu-item-wrap w-inline-block">
+          <a href="https://t.me/BitConnectEntry" target="_blank" class="start-menu-item-wrap w-inline-block">
             <img src="images/64441a2b0d01ac05ee6cd518_telegram.png" loading="lazy" sizes="100vw" srcset="images/64441a2b0d01ac05ee6cd518_telegram-p-500.png 500w, images/64441a2b0d01ac05ee6cd518_telegram.png 608w" alt class="start-icon">
             <div class="menu-link-title">TELEGRAM</div>
           </a>
@@ -338,7 +338,8 @@
         </div>
         <div class="menu-side-wrapper">
          
-          <a data-w-id="a099d061-e64b-d3e1-7e7d-b09985ef420a" href="#" class="menu-button w-inline-block">
+          <a data-w-id="a099d061-e64b-d3e1-7e7d-b09985ef420a" href="
+          #" class="menu-button w-inline-block">
             <h3 class="menu-title">START</h3>
           </a>
           <div class="nav-bar-divider"></div>
