--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
       }(window, document);
     </script>
-    <link href="images/pfhVZzN.png" rel="shortcut icon" type="image/x-icon">
-    <link href="images/pfhVZzN.png" rel="apple-touch-icon">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <style>
       body {
         height: 100vh;
