--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <div class="contact-wrapper">
             <div class="contact-text-wrapper">
               <h3 class="icons-heading">JOIN OUR COMMUNITY </h3>
-              <a href="https://twitter.com/" target="_blank" class="icon-text-wrapper w-inline-block">
+              <a href="https://twitter.com/BitConnectErc20" target="_blank" class="icon-text-wrapper w-inline-block">
                 <img src="images/64441b0b5570e31234050fd4_twitter.png" loading="lazy" alt class="link-icon">
                 <div class="text-block-3">TWITTER</div>
               </a>
@@ -329,7 +329,7 @@
             <img src="images/64441a2b0d01ac05ee6cd518_telegram.png" loading="lazy" sizes="100vw" srcset="images/64441a2b0d01ac05ee6cd518_telegram-p-500.png 500w, images/64441a2b0d01ac05ee6cd518_telegram.png 608w" alt class="start-icon">
             <div class="menu-link-title">TELEGRAM</div>
           </a>
-          <a href="https://twitter.com/" target="_blank" class="start-menu-item-wrap w-inline-block">
+          <a href="https://twitter.com/BitConnectErc20" target="_blank" class="start-menu-item-wrap w-inline-block">
             <img src="images/64441b0b5570e31234050fd4_twitter.png" loading="lazy" alt class="start-icon">
             <div class="menu-link-title">TWITTER</div>
           </a>
